--- a/SimpleChat/SimpleChat.csproj
+++ b/SimpleChat/SimpleChat.csproj
@@ -12,6 +12,8 @@
     <ItemGroup>
       <PackageReference Include="MvvmCross.DroidX.Material" Version="9.2.0" />
       <PackageReference Include="MvvmCross.DroidX.RecyclerView" Version="9.2.0" />
+      <PackageReference Include="MvvmCross.Plugin.Visibility" Version="9.2.0" />
+      <PackageReference Include="Xamarin.AndroidX.Preference" Version="1.2.1.5" />
       <PackageReference Include="Xamarin.Google.Android.Material" Version="1.10.0.4" />
     </ItemGroup>
     <ItemGroup>
