--- a/SimpleChat.Core/SimpleChat.Core/SimpleChat.Core.csproj
+++ b/SimpleChat.Core/SimpleChat.Core/SimpleChat.Core.csproj
@@ -13,17 +13,9 @@
 
     <ItemGroup>
       <EmbeddedResource Update="Resources\Translates.resx">
-        <Generator>ResXFileCodeGenerator</Generator>
+        <Generator>PublicResXFileCodeGenerator</Generator>
         <LastGenOutput>Translates.Designer.cs</LastGenOutput>
       </EmbeddedResource>
-    </ItemGroup>
-
-    <ItemGroup>
-      <Compile Update="Resources\Translates.Designer.cs">
-        <DesignTime>True</DesignTime>
-        <AutoGen>True</AutoGen>
-        <DependentUpon>Translates.resx</DependentUpon>
-      </Compile>
     </ItemGroup>
 
 </Project>
